--- a/Páginas API/style.css
+++ b/Páginas API/style.css
@@ -37,7 +37,6 @@ header h1{
     font-family: "Source Sans 3", bold;
     font-style: normal;
     font-size: 65px;
-    margin-left: 50px;
     margin-top: 2%;
 }
 
@@ -78,6 +77,7 @@ footer{
 h1{
     color: white;
     font-size: 50px;
+    margin-left: 4%;
 }
 
 .light-mode h1{
@@ -85,6 +85,7 @@ h1{
 }
 .margin{
     margin-top: 3%;
+    margin-left: 4%;
     
 
 }
@@ -222,12 +223,12 @@ main{
     float:left;
     width: 350px;
     height: 350px; 
-    margin-right: 20px;
     margin-top: 2%;
+    margin-left: 5%;
     border-radius: 1cap;
 }
 #burndown{
-    margin-left: 20%;
+    margin-left: 30%;
     margin-top: 3%;
     margin-bottom: -5%;
 }
@@ -237,8 +238,8 @@ main{
     height: 220px;
     float:  right;
     border-radius: 25%;
-    margin-right: 12%;
-    margin-top: 1%;
+    margin-right: 8%;
+    margin-top: 0%;
     background-color: #f4f4f4;
 }
 #imgdod{
@@ -247,7 +248,7 @@ main{
     border-radius: 25%;
     float: inline-start;
     margin-top: 1%;
-    margin-right: 3%;
+    margin-right:1%;
 }
 #imgsoftskills{
     width: 400px;
@@ -255,6 +256,7 @@ main{
     float: inline-end;
     margin-right: 70px;
     border-radius: 20%;
+    padding-left: 20px;
 
 }
 #hardesoftimg{
@@ -262,21 +264,26 @@ main{
     height: 350px;
     border-radius: 20%;
     float: inline-start;
-    margin-right:2%;
-    margin-top: 2%;
+    margin-left: 4%;
+    padding-right: 20px;
+    margin-top: -2%;
+
 }
 #imgscrum{
     float: inline-end;
     width: 400px;
     height: 350px; 
-    margin-right:5%;
+    margin-right:2%;
+    padding-left: 20px;
+    margin-top: -5%;
 }
 #timescrum{
     float: left;
     width: 400px;
     height: 350px; 
-    margin-right:3%;
-    margin-top: -5%;
+    margin-left:3%;
+    margin-top: -6%;
+    padding-right: 20px;
 
 }
 
@@ -338,6 +345,7 @@ input {
 #btnmodalburndown{
     background-color: #04AA6D;
     border: none;
+    margin-left: 4%;
 }
 
 #atualizargrafico{
@@ -410,6 +418,7 @@ td {
 #btnmodalbacklog{
     background-color: #04AA6D;
     border: none;
+    margin-left: 4%;
 }
 
 
@@ -554,9 +563,6 @@ input[type="checkbox"]:checked + label + .content {
         width: 300px;
         height: 25px;
         font-size: 18px;
-    }
-    .userstory{
-        display: inline;
     }
     
     #h3branco{
