--- a/Páginas API/style.css
+++ b/Páginas API/style.css
@@ -38,6 +38,7 @@ header h1{
     font-style: normal;
     margin-top: 2%;
     font-size: 65px;
+    margin-left: 6%;
 }
 
 footer{
@@ -171,7 +172,7 @@ main{
     width: 360px;
     height:310px;
     float:inline-start;
-    margin-right: 2%;
+    margin-left: 2%;
     margin-top: -2%;
 }
 
@@ -220,6 +221,7 @@ main{
     margin-top: 2%;
     margin-left: 5%;
     border-radius: 1cap;
+    padding-right: 20px;
 }
 #burndown{
     margin-left: 30%;
@@ -233,6 +235,7 @@ main{
     float:  right;
     border-radius: 25%;
     margin-right: 8%;
+    margin-left: 2%;
     margin-top: 0%;
     background-color: #f4f4f4;
 }
@@ -243,6 +246,7 @@ main{
     float: inline-start;
     margin-top: 1%;
     margin-right:1%;
+    margin-left: 5%;
 }
 #imgsoftskills{
     width: 400px;
@@ -252,6 +256,9 @@ main{
     border-radius: 20%;
     padding-left: 20px;
 
+}
+#ajusteresp{
+    margin-top: 3%;
 }
 #hardesoftimg{
     width: 400px;
