--- a/Páginas API/style.css
+++ b/Páginas API/style.css
@@ -84,13 +84,14 @@ footer{
     
 
 }
-h2{
+section h2{
     color:#d4af37;
     font-family: "Source Sans 3";
     font-weight: 900;
     font-size: 40px;
-    margin-bottom: 50px;
+    margin-bottom: 0.5rem;
     margin-top: 20px;
+    margin-left: 1.5rem;
 }
 
 .light-mode h2{
@@ -99,9 +100,9 @@ h2{
 
 p{
     color: aliceblue;
-    font-size: x-large;
+    font-size: larger;
     font-family: "Lato";
-    font-weight: 900;
+    font-weight: 600;
     text-align: justify;
     padding: 0 4rem;
 }
@@ -109,12 +110,15 @@ p{
 
 ol{
     color: whitesmoke;
-    font-size: x-large;
+    font-size: larger;
     font-weight: 900;
     font-family: "Source Sans 3";
     margin-left: 0px;
     text-align: justify;
     padding: 0 4rem;
+}
+ol li::marker{
+    color: #d4af37;
 }
 
 .light-mode ol{
@@ -218,10 +222,11 @@ main{
     float:left;
     width: 350px;
     height: 350px; 
+    margin-right: 1rem;
     margin-top: 2%;
     margin-left: 5%;
     border-radius: 1cap;
-    padding-right: 20px;
+
 }
 #burndown{
     margin-left: 30%;
@@ -234,10 +239,11 @@ main{
     height: 220px;
     float:  right;
     border-radius: 25%;
-    margin-right: 8%;
-    margin-left: 2%;
-    margin-top: 0%;
+    margin-right: 2rem;
+    margin-left: 1rem;
+    margin-top: 1%;
     background-color: #f4f4f4;
+    display: flex;
 }
 #imgdod{
     width: 250px;
@@ -245,8 +251,8 @@ main{
     border-radius: 25%;
     float: inline-start;
     margin-top: 1%;
-    margin-right:1%;
-    margin-left: 5%;
+    margin-right: 1rem;
+    margin-left: 2rem;
 }
 #imgsoftskills{
     width: 400px;
@@ -254,7 +260,7 @@ main{
     float: inline-end;
     margin-right: 70px;
     border-radius: 20%;
-    padding-left: 20px;
+    margin-left: 2rem;
 
 }
 #ajusteresp{
@@ -293,7 +299,7 @@ main{
     height: 250px;
     margin-left: 27%;
     margin-top: 3%;
-    margin-bottom: -5%;
+    margin-bottom: 1rem;
 }
 
 #alinhar{
@@ -346,7 +352,7 @@ input {
 #btnmodalburndown{
     background-color: #04AA6D;
     border: none;
-    margin-left: 4%;
+    margin-left: 4rem;
 }
 
 #atualizargrafico{
@@ -419,7 +425,7 @@ td {
 #btnmodalbacklog{
     background-color: #04AA6D;
     border: none;
-    margin-left: 4%;
+    margin-left: 4rem;
 }
 
 #fecharbacklog{
